@@ -38,6 +38,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13152: Allow to specify a custom tabsize for expanding tabs in
+  textwrap. Patch by John Feuerstein.
+
 - Issue #14721: Send the correct 'Content-length: 0' header when the body is an
   empty string ''. Initial Patch contributed by Arve Knudsen.
 
